--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pyyaml = "^6.0.1"
 pip = "^24.0"
 install = "^1.3.5"
 ilperf = {git = "ssh://git@bitbucket.org/inferlink/ilperf.git"}
+fastapi = "^0.110.0"
 
 
 [build-system]
