--- a/docker/modules/polygon_extract/Dockerfile
+++ b/docker/modules/polygon_extract/Dockerfile
@@ -2,15 +2,14 @@ FROM pytorch/pytorch:2.1.2-cuda12.1-cudnn8-devel
 
 # INCLUDEX base.txt
 
-RUN conda install -y -n base \
-    scipy \
-    matplotlib \
-    numpy \
-    pandas==2.0.3 \
-    geopandas==0.13.2 \
-    shapely==2.0.1 \
-    conda-forge::gdal==3.6.2 \
-    fastai::opencv-python-headless
+RUN conda install -y -n base     scipy
+RUN conda install -y -n base     matplotlib
+RUN conda install -y -n base     numpy
+RUN conda install -y -n base     pandas
+RUN conda install -y -n base     geopandas
+RUN conda install -y -n base     shapely
+RUN conda install -y -n base     conda-forge::gdal
+RUN conda install -y -n base     fastai::opencv-python-headless
 
 RUN apt-get install -y libtiff-dev
 
