--- a/docker/hello-gpu/Dockerfile
+++ b/docker/hello-gpu/Dockerfile
@@ -5,7 +5,7 @@ FROM pytorch/pytorch:2.1.2-cuda12.1-cudnn8-devel
 
 RUN pip install nvidia-ml-py3 pydantic
 
-COPY ./ta1_integration /ta1/dev/ta1_integration
+COPY . /ta1/dev/ta1_integration
 
 WORKDIR /ta1/dev/ta1_integration
 ENV PYTHONPATH=/ta1/dev/ta1_integration
