--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,20 +10,22 @@ boto3 = "^1.34.31"
 boto3-stubs = "^1.34.35"
 botocore = "^1.34.38"
 docker = "^7.0.0"
+fastapi = "^0.110.0"
 filelock = "^3.13.1"
+#ilperf = {git = "ssh://git@bitbucket.org/inferlink/ilperf.git"}
+install = "^1.3.5"
 luigi = "^3.4.0"
 mypy_boto3_cloudformation = "^1.34.32"
 nvidia-ml-py3 = "7.352.0"
+pip = "^24.0"
 psutil = "^5.9.7"
 pydantic = "^2.5.2"
 pydantic-yaml = "^1.2.0"
 pydot = "^2.0.0"
 python = "^3.10"
 pyyaml = "^6.0.1"
-pip = "^24.0"
-install = "^1.3.5"
-ilperf = {git = "ssh://git@bitbucket.org/inferlink/ilperf.git"}
-fastapi = "^0.110.0"
+uvicorn = "^0.29.0"
+strenum = "^0.4.15"
 
 
 [build-system]
