--- a/docker/modules/legend_segment/Dockerfile
+++ b/docker/modules/legend_segment/Dockerfile
@@ -2,10 +2,10 @@ FROM docker.uncharted.software/segmentation:latest
 
 # INCLUDEX perms.txt
 
-COPY . /ta1/dev/uncharted-ta1/
+COPY . /ta1/repos/uncharted-ta1/
 
-WORKDIR /ta1/dev/uncharted-ta1
-ENV PYTHONPATH=/ta1/dev/uncharted-ta1:$PYTHONPATH
+WORKDIR /ta1/repos/uncharted-ta1
+ENV PYTHONPATH=/ta1/repos/uncharted-ta1:$PYTHONPATH
 
 CMD []
 ENTRYPOINT [ \
