--- a/config.yml
+++ b/config.yml
@@ -6,11 +6,11 @@
 #   $REPO_DIR --> the value of {container.repo_dir}
 
 host:
-    input_dir: /home/ubuntu/ta1/inputs
-    output_dir: /home/ubuntu/ta1/outputs
-    temp_dir: /home/ubuntu/ta1/temps
-    repo_dir: /home/ubuntu/ta1/repos
-    runs_dir: /home/ubuntu/ta1/runs
+    input_dir: /ta1/inputs
+    output_dir: /ta1/outputs
+    temp_dir: /ta1/temps
+    repo_dir: /ta1/repos
+    runs_dir: /ta1/runs
 
 
 container:
@@ -21,9 +21,6 @@ container:
 
 
 modules:
-    -   name: start
-    -   name: all
-
     # ---------------------------------------------------------------------------
     # LEGEND_SEGMENT
     # ---------------------------------------------------------------------------
