--- a/docker/modules/line_extract/Dockerfile
+++ b/docker/modules/line_extract/Dockerfile
@@ -87,11 +87,16 @@ ENV PATH /usr/local/cuda/bin:${PATH}
 ENV LD_LIBRARY_PATH /usr/local/cuda/lib64:${LD_LIBRARY_PATH}
 ENV NVIDIA-SMI /usr/bin/nvidia-smi
 
-RUN git clone https://github.com/fundamentalvision/Deformable-DETR.git /ta1/dev/Deformable-DETR
+RUN git clone https://github.com/fundamentalvision/Deformable-DETR.git /ta1/repos/Deformable-DETR
 
 RUN apt-get update && apt-get install sudo
 
 # INCLUDEX perms.txt
+
+USER root
+RUN adduser cmaas sudo
+RUN echo "cmaas ALL=(ALL:ALL) NOPASSWD: ALL" >> /etc/sudoers
+USER cmaas
 
 COPY ./usc-umn-inferlink-ta1/ /ta1/repos/usc-umn-inferlink-ta1/
 
