--- a/ops/mip.service
+++ b/ops/mip.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 User=ubuntu
 WorkingDirectory=/ta1/repos/t1_integration
-ExecStart=/home/ubuntu/.local/bin/uvicorn mip/mip_server/mip_server:app --reload
+ExecStart=/home/ubuntu/.local/bin/poetry run uvicorn mip.mip_server.mip_server:app --reload
 Restart=always
 Environment="TELEX_CONFIG=/home/ubuntu/config.ini"
 
