--- a/ops/ilaws_template.yml
+++ b/ops/ilaws_template.yml
@@ -66,17 +66,30 @@ Resources:
             GroupDescription: "SSH, MySQL and web traffic in, all traffic out."
             VpcId: !Ref VPC
             SecurityGroupIngress:
+                # ssh
+                - IpProtocol: tcp
+                  FromPort: 22
+                  ToPort: 22
+                  CidrIp: 0.0.0.0/0
+                # http
                 - IpProtocol: tcp
                   FromPort: 80
                   ToPort: 80
                   CidrIp: 0.0.0.0/0
+                # ssl
                 - IpProtocol: tcp
                   FromPort: 443
                   ToPort: 443
                   CidrIp: 0.0.0.0/0
+                # Caddy proxy
                 - IpProtocol: tcp
-                  FromPort: 22
-                  ToPort: 22
+                  FromPort: 8000
+                  ToPort: 8000
+                  CidrIp: 0.0.0.0/0
+                # HTTP
+                - IpProtocol: tcp
+                  FromPort: 8080
+                  ToPort: 8080
                   CidrIp: 0.0.0.0/0
 
     ElasticIPInstance1:
