--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,18 @@ python = "^3.10"
 pyyaml = "^6.0.1"
 uvicorn = "^0.29.0"
 strenum = "^0.4.15"
+httpx = "^0.27.0"
+pillow = "^10.1.0"
+pydantic-settings = "^2.2.1"
+ngrok = "^1.2.0"
+rasterio = "^1.3.9"
+pyproj = "^3.6.1"
+cdr_schemas = { git = "https://github.com/DARPA-CRITICALMAAS/cdr_schemas.git", tag = "v0.2.6+draft" }
 
+[tool.poetry.group.dev.dependencies]
+isort = "^5.13.2"
+black = "^24.2.0"
+autoflake = "^2.3.0"
 
 [build-system]
 requires = ["poetry-core"]
