--- a/config.yml
+++ b/config.yml
@@ -6,11 +6,11 @@
 #   $REPO_DIR --> the value of {container.repo_dir}
 
 host:
-    input_dir: /ta1/inputs
-    output_dir: /ta1/outputs
-    temp_dir: /ta1/temps
-    repo_dir: /ta1/repos
-    runs_dir: /ta1/runs
+    input_dir: /cdr/inputs
+    output_dir: /cdr/outputs
+    temp_dir: /cdr/temps
+    repo_dir: /cdr/repos
+    runs_dir: /cdr/runs
 
 
 container:
@@ -108,10 +108,36 @@ modules:
             # temp:
             # misc:
             map_name: $MAP_NAME
-            patch_sizes: [1000, 256]
-            strides: [1000, 200]
-            only_crop_map_area: [True, True]
+            patch_sizes: [1000, 256, 640]
+            strides: [1000, 200, 320]
+            only_crop_map_area: [True, True, True]
 
+     # ---------------------------------------------------------------------------
+    # TEXT_SPOTTING
+    # ---------------------------------------------------------------------------
+    # where: integration/text_spotting
+    # by: Weiwei (Zekun)
+    # requires: map_crop
+    # produced: geojson
+    -   name: text_spotting
+        gpu: true
+        user: root
+        options:
+            # inputs:
+            input_dir_path: $OUTPUT_DIR/map_crop/$MAP_NAME_g1000_s1000_wo_legend
+            # outputs:
+            output_folder: $OUTPUT_DIR/text_spotting
+            # temp:
+            # misc:
+            model_weight_path: $INPUT_DIR/modules/text_spotting/trained_weights/model_final.pth
+            spotter_config: $REPO_DIR/usc-umn-inferlink-ta1/system/mapkurator/spotter_v2/PALEJUN/configs/PALEJUN/SynthMap/SynthMap_Polygon.yaml
+            map_kurator_system_dir: $REPO_DIR/usc-umn-inferlink-ta1/system/mapkurator/mapkurator-system
+            text_spotting_model_dir: $REPO_DIR/usc-umn-inferlink-ta1/system/mapkurator/spotter_v2/PALEJUN
+            expt_name: $MAP_NAME
+            module_text_spotting: ""
+            spotter_model: spotter_v2
+            spotter_expt_name: $MAP_NAME
+            module_img_geojson: ""
 
     # ---------------------------------------------------------------------------
     # LINE_EXTRACT
@@ -162,7 +188,7 @@ modules:
             dir_to_intermediate: $TEMP_DIR/polygon_extract
             # misc:
             version: 0
-
+            trade_off: 6
 
     # ---------------------------------------------------------------------------
     # POINT_EXTRACT
@@ -176,17 +202,19 @@ modules:
         options:
             ## inputs:
             map_dir: $INPUT_DIR/maps
+            map_metadata_dir: $OUTPUT_DIR/legend_item_description
+            map_patches_dir: $OUTPUT_DIR/map_crop/$MAP_NAME_g1000_s1000_wo_legend
             #template_dir: $REPO_DIR/usc-umn-inferlink-ta1/point/point-symbol-pipeline/Template
             model_weights_dir: $REPO_DIR/usc-umn-inferlink-ta1/point/src/pipeline-scripts/model_weights
             symbol_info_json_file: $REPO_DIR/usc-umn-inferlink-ta1/point/src/pipeline-scripts/automated_model_selection/symbol_info.json
+            strike_model_dir: $REPO_DIR/usc-umn-inferlink-ta1/point/src/pipeline-scripts/strike_model_weights/
             # outputs:
             output_dir_root: $OUTPUT_DIR/point_extract
-            map_metadata_dir: $OUTPUT_DIR/legend_item_description
-            map_patches_dir: $OUTPUT_DIR/map_crop/$MAP_NAME_g1000_s1000_wo_legend
             # temp:
             #cropped_legend_dir: $TEMP_DIR/point_extract
             #processed_legend_dir: $TEMP_DIR/point_extract
             # misc:
+            gpu_id: 2
 
 
     # ---------------------------------------------------------------------------
@@ -207,7 +235,8 @@ modules:
             # temp:
             temp_dir: $TEMP_DIR/georeference
             # misc:
-            reformat: ""
+            gpu_id: 3
+            # reformat: ""
 
 
     # ---------------------------------------------------------------------------
